refactor: add context deadline in mail| update swagger text
